--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,17 +11,22 @@ nav:
       - 'გაფართოებული ეუკლიდეს ალგორითმი': './algebra/extended-euclid-algorithm.md'
       - 'წრფივი დიოფანტინის განტოლებები': './algebra/linear-diophantine-equation.md'
       - 'ფიბონაჩის რიცხვები': './algebra/fibonacci-numbers.md'
+    - მარტივი რიცხვები:
+      - 'ერატოსთენეს საცერი': './algebra/sieve-of-eratosthenes.md'
+      - 'წრფივი საცერი': './algebra/prime-sieve-linear.md'
+      - 'პირველობის ტესტები': './algebra/primality_tests.md'
+      - 'მთელი რიცხვების ფაქტორიზაცია': './algebra/factorization.md'
 extra_javascript:
-  - javascript/config.js
+  # - javascript/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
   - stylesheets/extra.css
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
       # tex_inline_wrap: ["$", "$"]
-      tex_block_wrap: ["$$", "$$"]
+      # tex_block_wrap: ["$$", "$$"]
   - pymdownx.highlight
   - admonition
   - pymdownx.details
@@ -35,8 +40,8 @@ markdown_extensions:
   - meta
   - toc:
       permalink: true
-
 # plugins:
+#   - math
 #   # - mkdocs-simple-hooks:
 #   #     hooks:
 #   #       on_env: "hooks:on_env"
